Fix color of certain buttons on iOS

--- a/src/app/components/content/routes/routeDetails/SubRouteDetails.module.css
+++ b/src/app/components/content/routes/routeDetails/SubRouteDetails.module.css
@@ -83,6 +83,8 @@
   cursor: pointer;
   border: 0;
   outline: none;
+
+  color: black;
 }
 
 .intermediateStationsButton > svg {
