--- a/src/app/components/content/routes/routesOverview/RoutesOverview.module.css
+++ b/src/app/components/content/routes/routesOverview/RoutesOverview.module.css
@@ -122,6 +122,7 @@
 
   font-size: 1rem;
   font-weight: 500;
+  color: black;
 
   background: none;
   cursor: pointer;
