--- a/src/app/components/content/tripSelector/dateAndTimePicker/DateAndTimePicker.module.css
+++ b/src/app/components/content/tripSelector/dateAndTimePicker/DateAndTimePicker.module.css
@@ -21,6 +21,7 @@
 
   font-size: 1rem;
   font-weight: 500;
+  color: black;
 }
 
 .dateAndTimePickerButton:is(:hover, :focus) {
